# demo-msgraph-api

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  tag.py
app/models/: model_msgraph.py  model_template.py
app/routers/: msgraph.py  template.py
app/services/: service_msgraph.py  service_template.py
docker/: Dockerfile
